--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>imAdityaSharma</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title> Aditya Sharma </title>
+    <link rel="stylesheet" href="dark.css">
+  </head>
 <body>
   <div class="box1">
-    I'm lazy so I didn't spend time in creating my Portfolio<br>
-    <a href="https://github.com/imAdityaSharma/">So visit My GitHub Profile 😒</a>
-  </div>
+  I'm lazy so I didn't spent time in creating my Portfolio<br><a href="https://github.com/imAdityaSharma/">So visit My github Profile 😒</a>
+</div>
   <script src="script.js"></script>
+  
 </body>
 </html>
