--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
     <div id="intro" class="intro">
         <div class="intro-container">
             <div class="intro-profile">
-                <img src="dp.jpg" alt="Aditya Sharma">
+                <img src="profile-pic.jpg" alt="Aditya Sharma">
             </div>
             <div class="intro-text">
                 <h1>Aditya Sharma</h1>
