--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
       <section id="contact" class="contact">
         <div class="container">
           <h2>Contact</h2>
-          <p>Reach out to me</p>
+          <p>Reach out to me</p><br>
           <a href="mailto:adityambha@outlook.com" class="contact-button">Outlook Email</a>
             <a href="https://www.linkedin.com/in/aditya-sharma-95136716a"  class="contact-button" target="_blank">LinkedIn</a>
             <a href="https://github.com/imAdityaSharma"  class="contact-button" target="_blank">GitHub</a>
