--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="styles.css">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9577733523183566"
      crossorigin="anonymous"></script>
-
+     <!-- <script async custom-element="amp-ad" src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script> -->
 </head>
 
 <body>
@@ -150,6 +150,19 @@
           <p>&copy; 2024 Aditya Sharma. All rights reserved.</p>
         </div>
       </footer>
+      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9577733523183566"
+     crossorigin="anonymous"></script>
+<!-- bottombanner -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-9577733523183566"
+     data-ad-slot="8793965600"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
       <script src="animation.js"></script>
     </body>
     
