--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="styles.css">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9577733523183566"
      crossorigin="anonymous"></script>
+     <meta name="google-site-verification" content="sPG7XAvvlWTetQWJN4WgwhayeXj8b6rmd3Qfef0D7UI" />
      <!-- <script async custom-element="amp-ad" src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script> -->
 </head>
 
