--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9577733523183566"
      crossorigin="anonymous"></script>
      <meta name="google-site-verification" content="sPG7XAvvlWTetQWJN4WgwhayeXj8b6rmd3Qfef0D7UI" />
+     <meta name="google-adsense-account" content="ca-pub-9577733523183566">
      <!-- <script async custom-element="amp-ad" src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script> -->
 </head>
 
