--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
           <h2>Contact</h2>
           <p>Reach out to me</p><br>
           <a href="mailto:adityambha@outlook.com" class="contact-button">Outlook Email</a>
-            <a href="https://www.linkedin.com/in/aditya-sharma-95136716a"  class="contact-button" target="_blank">LinkedIn</a>
+            <a href="https://www.linkedin.com/in/imadityasharma/"  class="contact-button" target="_blank">LinkedIn</a>
             <a href="https://github.com/imAdityaSharma"  class="contact-button" target="_blank">GitHub</a>
             <a href="assets/RESUME__Adi.pdf" class="contact-button" download="Resume_Aditya_Sharma.pdf">
               My Resume <!--  <img width="30" height="20" src="https://img.icons8.com/ios-glyphs/30/download--v1.png" alt="Download Resume"/> -->
