--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
               <a href="mailto:adityambha@outlook.com" class="contact-button">Outlook Email</a>
               <a href="https://www.linkedin.com/in/imadityasharma/"  class="contact-button" target="_blank">LinkedIn</a>
               <a href="https://github.com/imAdityaSharma"  class="contact-button" target="_blank">GitHub</a>
-              <a href="assets/RESUME__Adi.pdf" class="contact-button" download="Resume_Aditya_Sharma.pdf">
+              <a href="assets/ADITYA_SHARMA_CV.pdf" class="contact-button" download="Resume_Aditya_Sharma.pdf">
                 My Resume
               </a>
             </div>
