--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9577733523183566"
+    <!-- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9577733523183566"
      crossorigin="anonymous"></script>
      <meta name="google-site-verification" content="sPG7XAvvlWTetQWJN4WgwhayeXj8b6rmd3Qfef0D7UI" />
-     <meta name="google-adsense-account" content="ca-pub-9577733523183566">
+     <meta name="google-adsense-account" content="ca-pub-9577733523183566"> -->
      <!-- <script async custom-element="amp-ad" src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script> -->
     <meta name="theme-color" content="#2196F3">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -368,7 +368,7 @@
             <div class="container">
               <h2>Contact</h2>
               <p>Reach out to me</p><br>
-              <a href="mailto:adityambha@outlook.com" class="contact-button">Outlook Email</a>
+              <a href="mailto:adityambha@outlook.com" class="contact-button">Outlook</a>
               <a href="https://www.linkedin.com/in/imadityasharma/"  class="contact-button" target="_blank">LinkedIn</a>
               <a href="https://github.com/imAdityaSharma"  class="contact-button" target="_blank">GitHub</a>
               <a href="assets/ADITYA_SHARMA_CV.pdf" class="contact-button" download="Resume_Aditya_Sharma.pdf">
@@ -381,10 +381,10 @@
             <div class="container">
             </div>
           </footer>
-          <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9577733523183566"
-         crossorigin="anonymous"></script>
+          <!-- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9577733523183566" -->
+         <!-- crossorigin="anonymous"></script> -->
     <!-- b1 -->
-    <ins class="adsbygoogle"
+    <!-- <ins class="adsbygoogle"
          style="display:block"
          data-ad-client="ca-pub-9577733523183566"
          data-ad-slot="3234818485"
@@ -392,7 +392,7 @@
          data-full-width-responsive="true"></ins>
     <script>
          (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
+    </script> -->
 
           <script src="animation.js"></script>
     </div>
