--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                         <div class="timeline-content">
                             <div class="timeline-header">
                                 <h3>Project-Based Professional</h3>
-                                <span class="date">Oct 2024 - Present</span>
+                                <span class="date">Oct 2024 - Aug-25</span>
                             </div>
                             <h4>MAXRay - AI agent for XRay Image Recognition</h4>
                             <ul class="timeline-details">
@@ -371,7 +371,7 @@
               <a href="mailto:adityambha@outlook.com" class="contact-button">Outlook</a>
               <a href="https://www.linkedin.com/in/imadityasharma/"  class="contact-button" target="_blank">LinkedIn</a>
               <a href="https://github.com/imAdityaSharma"  class="contact-button" target="_blank">GitHub</a>
-              <a href="assets/ADITYA_SHARMA_CV.pdf" class="contact-button" download="Resume_Aditya_Sharma.pdf">
+              <a href="assets/CV_ADITYA_SHARMA.pdf" class="contact-button" download="Resume_Aditya_Sharma.pdf">
                 My Resume
               </a>
             </div>
