--- a/index.html
+++ b/index.html
@@ -415,19 +415,11 @@
                 <h2 id="github-heading">GitHub Activity</h2>
                 <div class="stats-grid">
                     <!-- GitHub Stats Card -->
-                    <div class="github-card main-stats">
-                        <img src="https://github-readme-stats.vercel.app/api?username=imAdityaSharma&show_icons=true&theme=tokyonight&hide_border=true&include_all_commits=true&count_private=true&card_width=450&custom_title=GitHub Overview" alt="GitHub Stats">
-                    </div>
-                    
                     <div class="stats-sub-grid">
-                        <!-- Most Used Languages -->
-                        <div class="github-card">
-                            <img src="https://github-readme-stats.vercel.app/api/top-langs/?username=imAdityaSharma&layout=compact&theme=tokyonight&hide_border=true&card_width=320" alt="Most Used Languages">
-                            <img src="https://github-readme-streak-stats.herokuapp.com/?user=imAdityaSharma&theme=tokyonight&hide_border=true&card_width=320" alt="GitHub Streak">
-                        </div>
-                    </div>
-                </div>
-                
+                        <img src="https://github-readme-stats.vercel.app/api?username=imAdityaSharma&show_icons=true&theme=radical" alt="github Stats">
+                        <img src="https://github-readme-stats.vercel.app/api/top-langs/?username=imAdityaSharma&layout=compact&theme=tokyonight&hide_border=true&card_width=320" alt="Most Used Languages">
+                        <img src="https://github-readme-streak-stats.herokuapp.com/?user=imAdityaSharma&theme=tokyonight&hide_border=true&card_width=320" alt="GitHub Streak">
+                    </div>                
                 <!-- Snake Animation -->
                 <div class="snake-container">
                     <img src="https://raw.githubusercontent.com/imAdityaSharma/imAdityaSharma/output/snake.svg" alt="Snake animation">
